@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-04-16T16:09:19Z",
+  "timestamp" : "2022-04-17T00:37:13Z",
   "count_outdated" : 0,
   "uniques_outdated" : 0,
-  "count" : 6,
-  "uniques" : 4,
+  "count" : 7,
+  "uniques" : 5,
   "clones" : [
     {
       "timestamp": "2022-04-16T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 6 ],
-      "uniques": 4,
-      "uniques_minmax": [ 4, 4 ]
+      "count": 7,
+      "count_minmax": [ 6, 7 ],
+      "uniques": 5,
+      "uniques_minmax": [ 4, 5 ]
     }
   ]
 }
