@@ -1,11 +1,11 @@
 {
-  "count": 6,
-  "uniques": 4,
+  "count": 7,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-04-16T00:00:00Z",
-      "count": 6,
-      "uniques": 4
+      "count": 7,
+      "uniques": 5
     }
   ]
 }
