@@ -1,5 +1,11 @@
+2022-04-17T00:37:13Z:
+* notice: last 14d: all unq: 7 5
+* notice: prev accum: outdated-all outdated-unq / all unq: 0 0 / 6 4
+* notice: next accum: outdated-all outdated-unq / all unq: 0 0 / 7 5
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +1 / -0 -0
+
 2022-04-16T16:09:19Z:
 * notice: last 14d: all unq: 6 4
 * notice: prev accum: outdated-all outdated-unq / all unq: 0 0 / 0 0
 * notice: next accum: outdated-all outdated-unq / all unq: 0 0 / 6 4
-* notice: prev json diff // prev day diff: unq all: +4 +6 / -0 -0 // +4 +6 / -0 -0
+* notice: prev json diff // prev day diff: unq all: +4 +6 / -0 -0 // +4 +6 / -0 -0
